--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <div class="header-position">
-            <a href="/">
+            <a href="#about">
                 <img class="logo" src="images/logo.png" alt="Logo">
             </a>
             <p class="header-list">
